Fixed hover behavior on mobile.

--- a/index.css
+++ b/index.css
@@ -109,24 +109,10 @@ ul li {
     overflow: visible;
 }
 
-li:hover {
-    background-color: var(--bg-color);
-    box-shadow: inset 0 0 7px -5px red;
-}
-
 li.checked {
     background-color: rgb(211, 1, 1);
     color: var(--text-color2);
     opacity: 0.5;
-}
-
-li:hover::before {
-    content: "Remove";
-    color: red;
-    font-size: 0.6rem;
-    position: absolute;
-    left: calc(50% - 1rem);
-    top: 2.7em;
 }
 
 img {
@@ -158,8 +144,7 @@ input {
     background-color: #DCE1EB;
 }
 
-input:active, 
-input:hover, 
+input:active,  
 input:focus {
     outline-color: var(--accent-color);
 }
@@ -182,18 +167,6 @@ button {
     transition: background-color, 250ms;
 }
 
-.add-button:hover,
-.add-button:active,
-.add-button:focus {
-    background: var(--accent-color);
-    outline-color: black;
-}
-
-.add-button:active {
-    transform: scale(0.9);
-    transition: all 500ms;
-}
-
 .clear-button {
     width: 100px;
     font-size: .9rem;
@@ -205,18 +178,6 @@ button {
     display: none;
 }
 
-.clear-button:hover,
-.clear-button:active,
-.clear-button:focus {
-    background: rgb(111, 48, 48);
-    outline-color: black;
-}
-
-.clear-button:active {
-    transform: scale(0.9);
-    transition: all 500ms;
-}
-
 .list-item {
     display: block;
 }
@@ -224,4 +185,46 @@ button {
 .empty-list {
     font-size: 1.5rem;
     margin: 0;
+}
+
+/* For devices that hover */
+@media (hover: hover) {
+
+    .add-button:hover,
+    .add-button:active,
+    .add-button:focus {
+    background: var(--accent-color);
+    outline-color: black;
+}
+
+    .add-button:active {
+    transform: scale(0.9);
+    transition: all 500ms;
+}
+
+li:hover {
+    background-color: var(--bg-color);
+    box-shadow: inset 0 0 7px -5px red;
+}
+li:hover::before {
+    content: "Remove";
+    color: red;
+    font-size: 0.6rem;
+    position: absolute;
+    left: calc(50% - 1rem);
+    top: 2.7em;
+}
+
+    .clear-button:hover,
+    .clear-button:active,
+    .clear-button:focus {
+    background: rgb(111, 48, 48);
+    outline-color: black;
+}
+
+    .clear-button:active {
+    transform: scale(0.9);
+    transition: all 500ms;
+}
+
 }
